--- a/src/component/common/topnav/topnav.css
+++ b/src/component/common/topnav/topnav.css
@@ -5,14 +5,14 @@
   z-index: 999;
   background: #1665a0;
   width: calc(100% - 250px);
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
 }
 
 .top-nav-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 5px;
 }
 
 .top-nav-right {
